Styled nav-bar: Fixed social links from overlapping main nav links when width of page gets smaller

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -13,10 +13,6 @@ body {
   flex-direction: column;
 }
 
-.team-page {
-  height: 100%;
-}
-
 #header {
   background-image: url('../images/clouds.png');
   background-repeat: no-repeat;
@@ -50,9 +46,8 @@ body {
   border-bottom-color: transparent;
   text-decoration: none;
   color: black;
-  margin: 10px;
+  margin: 20px 10px;
   font-size: 20px;
-  padding-top: 7px;
 }
 
 .nav-link.light {
@@ -65,10 +60,11 @@ body {
 }
 
 #social-links {
-  display: inline-block;
+  display: flex;
+  justify-content: center;
   position: absolute;
-  right: 10px;
-  margin: 10px;
+  right: 20px;
+  top: 28px;
 }
 
 #content-wrapper {
@@ -376,6 +372,14 @@ the latter will have a small overlap with min-width: 480px.
 }
 
 @media only screen and (max-width: 749.98px) {
+  #social-links {
+    display: flex;
+    flex-wrap: wrap;
+    position: absolute;
+    width: 60px;
+    top: 10px;
+  }
+
   .feature-item img {
     margin: 0 auto;
     width: 96%;
@@ -411,6 +415,8 @@ the latter will have a small overlap with min-width: 480px.
 
   .nav-link {
     display: block;
+    margin-top: 0;
+    margin-bottom: 16px;
   }
 
   .nav-link:hover {
@@ -418,8 +424,8 @@ the latter will have a small overlap with min-width: 480px.
   }
 
   #social-links {
-    display: block;
     position: initial;
+    width: 100%;
   }
 
   #game-logo {
